--- a/index.html
+++ b/index.html
@@ -68,13 +68,28 @@
                   <span>7 noches</span> 
                 </div>
                 <div class="product-bot">
+                  <div class="btn-flip">
                   <button class="btn-buy">Add</button>
-                  <div class="flip-icon"><i class="fas fa-arrow-circle-right"></i></div>                  
+                  <div class="flip-icon"><i class="fas fa-arrow-circle-right"></i>
+                  </div></div>                  
                 </div>
 
               </div>
               <div class="card-back">
-                <p class="itinerary">Itinerary goes here...</p>
+                <div class="itinerario">
+                  <h2>Itinerario</h2>
+                  <ul>
+                    <li><span>Dia 1</span> Buenos Aires, Argentina</li>
+                    <li><span>Dia 2</span> Navegacion</li>
+                    <li><span>Dia 3</span> Navegacion</li>
+                    <li><span>Dia 4</span> Río de Janeiro, Brasil</li>
+                    <li><span>Dia 5</span> Buzios, Brasil</li>
+                    <li><span>Dia 6</span> Ilhabela, Brasil</li>
+                    <li><span>Dia 7</span> Navegacion</li>
+                    <li><span>Dia 8</span> Punta del Este, Uruguay</li>
+                    <li><span>"Dia 9"</span> Buenos Aires, Argentina</li>
+                  </ul>
+                </div>
                 <div class="flip-icon"><i class="fas fa-arrow-circle-left"></i></div>
               </div>
             </div>
