--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                 <div class="itinerario">
                   <h2>Itinerario</h2>
                   <ul>
-                    <li><span>Dia 1</span> Buenos Aires, Argentina</li>
-                    <li><span>Dia 2</span> Navegacion</li>
-                    <li><span>Dia 3</span> Navegacion</li>
-                    <li><span>Dia 4</span> Río de Janeiro, Brasil</li>
-                    <li><span>Dia 5</span> Buzios, Brasil</li>
-                    <li><span>Dia 6</span> Ilhabela, Brasil</li>
-                    <li><span>Dia 7</span> Navegacion</li>
-                    <li><span>Dia 8</span> Punta del Este, Uruguay</li>
-                    <li><span>"Dia 9"</span> Buenos Aires, Argentina</li>
+                    <li><span>Dia 1: Buenos Aires, Argentina</span></li>
+                    <li><span>Dia 2: Navegacion</span></li>
+                    <li><span>Dia 3: Navegacion</span></li>
+                    <li><span>Dia 4: Río de Janeiro, Brasil</span></li>
+                    <li><span>Dia 5: Buzios, Brasil</span></li>
+                    <li><span>Dia 6: Ilhabela, Brasil</span></li>
+                    <li><span>Dia 7: Navegacion</span></li>
+                    <li><span>Dia 8: Punta del Este, Uruguay</span></li>
+                    <li><span>Dia 9: Buenos Aires, Argentina</span></li>
                   </ul>
                 </div>
                 <div class="flip-icon"><i class="fas fa-arrow-circle-left"></i></div>
@@ -96,8 +96,8 @@
           </div>
 
         </div>
-             <div class="arrow left-arrow"><i class="fas fa-arrow-circle-left"></i></div>
-          <div class="arrow right-arrow"><i class="fas fa-arrow-circle-right"></i></div>     
+        <div class="arrow left-arrow"><i class="fas fa-arrow-circle-left"></i></div>
+        <div class="arrow right-arrow"><i class="fas fa-arrow-circle-right"></i></div>     
       </section>
       
 
