--- a/index.html
+++ b/index.html
@@ -51,50 +51,18 @@
       <!-- ----Productos---- -->
 
       <section id="products">
-
-        <div class="product-cards">
-          
-          <div class="card-container">
-            <div class="card" >
-              <div class="card-front">
-                <div class="product-card-image">
-                  <h2 class="product-name">Product name</h2>
-                </div>
-                <div class="product-price">
-                  <p>Precio</p>
-                  <span>$1000</span>
-                </div>
-                <div class="product-duration">
-                  <p>Duracion</p> 
-                  <span>7 noches</span> 
-                </div>
-                <div class="product-bot">
-                  <div class="btn-flip">
-                  <button class="btn-buy">Add</button>
-                  <div class="flip-icon"><i class="fas fa-arrow-circle-right"></i>
-                  </div></div>                  
-                </div>
-
-              </div>
-              <div class="card-back">
-                <div class="itinerario">
-                  <h2>Itinerario</h2>
-                  <ul>
-                    <li><span>Dia 1: Buenos Aires, Argentina</span></li>
-                    <li><span>Dia 2: Navegacion</span></li>
-                    <li><span>Dia 3: Navegacion</span></li>
-                    <li><span>Dia 4: Río de Janeiro, Brasil</span></li>
-                    <li><span>Dia 5: Buzios, Brasil</span></li>
-                    <li><span>Dia 6: Ilhabela, Brasil</span></li>
-                    <li><span>Dia 7: Navegacion</span></li>
-                    <li><span>Dia 8: Punta del Este, Uruguay</span></li>
-                    <li><span>Dia 9: Buenos Aires, Argentina</span></li>
-                  </ul>
-                </div>
-                <div class="flip-icon"><i class="fas fa-arrow-circle-left"></i></div>
-              </div>
-            </div>
+        <div class="products-container">
+          <div class="categoria-container" data-categoria="Caribe">
+            <h2>Caribe</h2>
           </div>
+          <div class="categoria-container" data-categoria="Europa">
+            <h2>Europa</h2>
+          </div>
+          <div class="categoria-container" data-categoria="Sudamerica">
+            <h2>Sudamerica</h2>
+          </div>
+        </div>
+
 
         </div>
         <div class="arrow left-arrow"><i class="fas fa-arrow-circle-left"></i></div>
