--- a/index.html
+++ b/index.html
@@ -41,23 +41,23 @@
       <!-- ----Productos---- -->
 
       <section id="products">
-        <nav class="navbar">
+        <nav class="navbar bts-fil">
           <ul class="menu">
-              <li>
-                  <button id="todos" class="boton-menu boton-categoria active"><i class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button>
-              </li>
-              <li>
-                  <button id="Sudamerica" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Sudamerica</button>
-              </li>
-              <li>
-                  <button id="Europa" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Europa</button>
-              </li>
-              <li>
-                  <button id="Caribe" class="boton-menu boton-categoria"><i class="bi bi-hand-index-thumb"></i> Caribe</button>
-              </li>
-
+            <li>
+              <button id="todos" class="boton-menu boton-categoria active" data-categoria="todos"><i class="bi bi-hand-index-thumb-fill"></i> Todos los productos</button>
+            </li>
+            <li>
+              <button id="Sudamerica" class="boton-menu boton-categoria" data-categoria="Sudamerica"><i class="bi bi-hand-index-thumb"></i> Sudamerica</button>
+            </li>
+            <li>
+              <button id="Europa" class="boton-menu boton-categoria" data-categoria="Europa"><i class="bi bi-hand-index-thumb"></i> Europa</button>
+            </li>
+            <li>
+              <button id="Caribe" class="boton-menu boton-categoria" data-categoria="Caribe"><i class="bi bi-hand-index-thumb"></i> Caribe</button>
+            </li>
           </ul>
         </nav>
+        
         <div class="product-container">
           <h2 class="titulo-principal" id="titulo-principal">Todos los productos</h2>
           <p>
