--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>NuevoMundo.com</title>
     <link rel="icon" href="/assets/Img/Logo Proyecto.svg" />
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/mediaqueries.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" 
   </head>
   <body>
